--- a/Study/study/package.json
+++ b/Study/study/package.json
@@ -12,6 +12,8 @@
     "lucide-react": "^0.284.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-native-elements": "^3.4.3",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-scripts": "5.0.1",
     "universal-cookie": "^6.1.1",
@@ -42,7 +44,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "react-router-dom": "^6.16.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.5"
   }
 }
