--- a/Study/study/package.json
+++ b/Study/study/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "firebase": "^10.7.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
