--- a/Study/study/package.json
+++ b/Study/study/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
+    "@nextui-org/react": "^2.2.9",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,7 +14,7 @@
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "firebase": "^10.7.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.16.15",
     "lucide-react": "^0.284.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,7 +52,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^6.20.1",
     "tailwindcss": "^3.3.5"
   }
 }
