--- a/Study/study/package.json
+++ b/Study/study/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^4.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
@@ -13,15 +14,19 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "boostrap": "^2.0.0",
     "firebase": "^10.7.0",
     "framer-motion": "^10.16.15",
     "lucide-react": "^0.284.0",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-native-elements": "^3.4.3",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
