--- a/Study/study/package.json
+++ b/Study/study/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "study",
+  "name": "components",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,8 +18,10 @@
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "boostrap": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "firebase": "^10.7.0",
-    "framer-motion": "^10.16.15",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.284.0",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
@@ -27,6 +32,8 @@
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
@@ -58,6 +65,10 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "react-router-dom": "^6.20.1",
-    "tailwindcss": "^3.3.5"
-  }
+    "tailwindcss": "^3.3.6"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
