--- a/Study/study/package.json
+++ b/Study/study/package.json
@@ -21,7 +21,7 @@
     "boostrap": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "firebase": "^10.7.0",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.284.0",
     "react": "^18.2.0",
@@ -71,5 +71,8 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "postcss.config.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [
+    "^C"
+  ]
 }
